# legal-eagle-ai

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
backend/: main.py
dags/: daily_legal_etl.py  real_data_dag.py  weekly_training_dag.py
data_pipeline/scripts/: db_utils.py  etl_process.py  fetch_real_data.py  force_download.py  inference.py  prepare_data.py  test.py  train_model.py  transformer.py
models/: legal_eagle_model.pth
